--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "http-server -p 8991",
+    "start": "json-server --watch data/db.json",
+    "https": "node bin/https-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ryan Morris",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^4.19.1",
-    "http-server": "^0.11.1"
+    "json-server": "^0.13.0"
   }
 }
