--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,9 @@
         "no-restricted-syntax": 0,
         "no-prototype-builtins": 0,
         "prefer-template": 0,
-        "object-shorthand": 0
+        "object-shorthand": 0,
+        "prefer-arrow-callback": 0,
+        "no-new": 0,
+        "no-loop-func": 0
     }
 }
